syntax = "proto3";

package list;

option go_package = "./";

service ListService {
  rpc CreateList (CreateListRequest) returns (CreateListResponse);
  rpc GetLists (GetListsRequest) returns (GetListsResponse);
}

message CreateListRequest {
  string board_id = 1;
  string title = 2;
}

message CreateListResponse {
  string list_id = 1;
}

message GetListsRequest {
  string board_id = 1;
}

message GetListsResponse {
  repeated List lists = 1;
}

message List {
  string id = 1;
  string title = 2;
  string board_id = 3;
}
